<resources>
    <string name="app_name">Power Calculator</string>
    <string name="logo_pnj">Logo PNJ</string>
    <string name="welcome_message">Broadband Multimedia Study Program\nElectrical Engineering\nPolytechnic State of
        Jakarta
    </string>
    <string name="logo_broadband">Logo Broadband</string>
    <string name="button_calculator">Calculator</string>
    <string name="button_history">History</string>
    <string name="button_reference">Reference &amp; About</string>

    <string-array name="list_configuration">
        <item>1:4:8</item>
        <item>1:4</item>
        <item>1:2</item>
    </string-array>

    <string name="fiber_reference">
        https://drive.google.com/file/d/1B4eLM82YC1X4mU-fDyv8rxSwUW0dCFDB/view?usp=sharing
    </string>

    <string name="lossfiber_reference">
        https://drive.google.com/file/d/1yy3Iu4luo9cI0K_ZPzDTGfUzUAXYEbmM/view?usp=sharing
    </string>

    <string name="splices_reference">
        https://drive.google.com/file/d/1WOmnkBXMTyUmpkmtrbpV8orDRlsua8M-/view?usp=sharing
    </string>

    <string name="connector_reference">
        https://drive.google.com/file/d/1SEvE0omz5BR_PMzeshvn4Rp1hSxoo_FW/view?usp=sharing
    </string>
    <string name="gpon_configuration">GPON Configuration</string>
    <string name="input_power_transmitter_dbm">Input Power Transmitter (dBm)</string>
    <string name="input_fiber_length">Input Fiber Length (KM)</string>
    <string name="input_connector">Input Number of Connector</string>
    <string name="n_connector">In Pairs</string>
    <string name="power_splitter_used">Power Splitter Used :</string>
    <string name="calculate_btn">Calculate</string>
    <string name="configurationChoice">Choose your Configuration</string>
    <string name="checkPowerTransmitter">Please Check Your Power Transmitter</string>
    <string name="checkFiberLength">Please Check Your Fibre Length</string>
    <string name="checkTotalSplices">Please Check Your Total Splices</string>
    <string name="checkTotalConnector">Please Check Your Total Connector</string>
    <string name="checkNetworkConfig">Please Choose Your Network Configuration</string>
    <string name="spasiDBM">dBm</string>
    <string name="spasiKMspasiXspasi">KM X</string>
    <string name="spasiDBperKMnewLine">dB/KM \n Result =</string>
    <string name="spasiXspasi">X</string>
    <string name="spasidBperpairnewLine">dB/pairs \n Result =</string>
    <string name="spasidbpersplicesnewline">dB/Splice \n Result =</string>
    <string name="resultView">Result =</string>
    <string name="input_splicing">Input Number of Splicing</string>
    <string name="result_text_configuration">Configuration</string>
    <string name="result_text_power_transmitter">Power Transmitter</string>
    <string name="result_loss_fiber">Loss in Optical Fibre</string>
    <string name="result_loss_connector">Loss in Connector</string>
    <string name="result_loss_splices">Loss in Splices</string>
    <string name="result_loss_powersplitter">Loss in Power Splitter</string>
    <string name="total_loss">Total Loss</string>
    <string name="text_capture">Take a Picture</string>
    <string name="take_screenshot">Take a Screenshot</string>
    <string name="save_and_print">Save and Print</string>
    <string name="how_to_use_this_app">How To Use This App</string>
    <string name="ref_title">
        The Reference of Value Used in This App
    </string>
    <string name="title_btn_technical_indonesia_ref">Technical Requirement in Indonesia</string>
    <string name="title_btn_corning_ref">Optical Fiber Attenuation</string>
    <string name="title_btn_connector_ref">Connector Loss</string>
    <string name="title_btn_splicing_ref">Splicing Loss</string>
    <string name="paragraph_how_to_use">
        This app has 3 Main Feature:\n
        1. Calculator\n
        2. History\n
        3. Reference &amp; About\n
        \n
        ------------------------\n
        1. Calculator\n
        To calculate value of Link Loss Budget.\n
        Prepare this value:\n
        a. GPON Configuration\t: Choose GPON Configuration to be calculated (1:4:8 or 1:4 or 1:2)\n
        b. Power Transmitter\t(in dBm)\n
        c. Fiber Length\t(in Kilometer)\n
        d. Number of Connector\t(in pairs)\n
        e. Number of Splicing\n
        f. Power Splitter Used\t(automatically set based on your configuration)\n
        NOTES: all value must be filled up. App cannot proceed to calculate if there is an empty box\n
        \n
        Click Calculate Button to see the result\n
        \n
        When you are in the result page, you can:\n
        - take a picture by clicking Take a Picture Button.\n
        You will be directed to Camera and after you confirm the picture will be displayed in the result page and saved in:\n
        InternalStorage/Android/Data/ac.id.pnj.broadbandmultimedia.bm2015/files/Pictures\n
        - Save and Print by clicking Save and Print Button\n
        NOTES: Please choose email provider only. Sharing will be fail if you choose another apps.\n
        The result will be saved in CSV (Comma Separated Value) File Format and will be send via email.\n
        For quick view, the result value will be attached in the body of email.\n
        - In-App Save Result by clicking Star Icon\n
        You can save your result by clicking star button in the top right of screen.\n
        The input value before this page will be saved in History page (will be explained later).\n
        Your input value and picture will be the thumbnail of History Page Item\n
        ------------------------\n
        2. History\n
        History is a page of saved result\n
        This page is empty if you never save a result.\n
        When you click star icon in the result page, this app only save your input value. \n
        So when you need the result, please choose your saved item and app will generate your result.\n
        \n
        TIPS: you can take a photo before you save the result so you can easily find your project
        or you can remember the ID of the result\n
        \n
        If you forget to take a picture, you can still take a picture and make it as a thumbnail after data is saved in history page.\n
        Please click the star icon (star will be empty in the middle) before you take a picture. After the photo saved, you can click the star icon again to save the photo as thumbnail\n
        You can still share the result from this page.\n
        ------------------------\n
        3. Reference &amp; About\n
        This page contain Reference Link to Google Drive and Instruction to use this app.\n
        Simply click the button and you\'ll be directed to document in Google Drive
    </string>
</resources>
