<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ReferenceAboutActivity">
    <ScrollView
            android:layout_height="300dp"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/custom_border"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_border"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_use_this_app"
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:background="@drawable/custom_border_for_image"
                    android:textAlignment="center"
                    android:gravity="center"

            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/text_how_to"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/custom_border"
            android:layout_marginTop="16dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textStyle="bold"
                android:text="@string/ref_title"
                android:textAlignment="center"
                android:background="@drawable/custom_border_for_image"
        />
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="24dp"
                        android:id="@+id/referensi_dirjen"
                        android:text="@string/title_btn_technical_indonesia_ref"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:background="@drawable/custom_border_button"
                />


                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="24dp"
                        android:id="@+id/referensi_corning_fiber"
                        android:text="@string/title_btn_corning_ref"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:background="@drawable/custom_border_button" />


                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/custom_border_button"
                        android:id="@+id/referensi_connector"
                        android:textColor="@android:color/white"
                        android:text="@string/title_btn_connector_ref"
                />


                <Button
                        android:id="@+id/referensi_splicing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/custom_border_button"
                        android:text="@string/title_btn_splicing_ref"
                        android:textColor="@android:color/white"
                />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>
