<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            tools:context=".ResultActivity">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:outlineProvider="bounds">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_border_for_image"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/result_text_configuration"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/tv_konfigurasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:background="@drawable/custom_border"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:outlineProvider="bounds">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_border_for_image"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/result_text_power_transmitter"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/tv_power_transmitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:background="@drawable/custom_border"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:outlineProvider="bounds">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_border_for_image"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/result_loss_fiber"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/tv_loss_fiber_optik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:background="@drawable/custom_border"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:outlineProvider="bounds">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_border_for_image"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/result_loss_connector"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/tv_loss_connector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:background="@drawable/custom_border"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:outlineProvider="bounds">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_border_for_image"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/result_loss_splices"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/tv_loss_splices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:background="@drawable/custom_border"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_border"
                android:layout_marginTop="8dp"
                android:outlineProvider="bounds">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_border_for_image"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/result_loss_powersplitter"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/tv_loss_power_splitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="4dp"
                    android:background="@drawable/custom_border"
                    android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_border"
                android:outlineProvider="bounds">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_border_for_image"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/total_loss"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/tv_total_loss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="4dp"
                    android:background="@drawable/custom_border"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />
        </LinearLayout>
        <ImageView
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_border_for_image"
                android:id="@+id/img_photo"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:id="@+id/btn_take_photo"
                android:background="@drawable/custom_border_button"
                android:text="@string/text_capture"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:background="@drawable/custom_border_button"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/take_screenshot"
                android:id="@+id/btn_screenshot"
        />
    </LinearLayout>
</ScrollView>